--- a/popup.css
+++ b/popup.css
@@ -67,6 +67,22 @@ h2 {
   margin-top: 5px;
 }
 
+#lead-panel {
+  position: fixed;
+  top: 1%;
+  left: 60%;
+  width: 500px;
+  height: 500px;
+  overflow-y: auto;
+  background: white;
+  border: 1px solid #656565;
+  z-index: 9999;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 10px;
+}
+
 .header {
   position: relative;
   display: flex;
@@ -90,6 +106,7 @@ h2 {
   align-items: center;
   justify-content: center;
   overflow: hidden;
+  cursor: move !important;
 }
 
 .close-button {
@@ -334,55 +351,4 @@ h2 {
   100% {
     transform: rotate(360deg);
   }
-}
-
-#lead-panel {
-  position: fixed;
-  top: 1%;
-  left: 66%;
-  width: 500px;
-  height: 400px;
-  overflow-y: auto;
-  background: white;
-  border: 1px solid #0073b1;
-  z-index: 9999;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  border-radius: 8px;
-  font-family: sans-serif;
-  padding: 10px;
-}
-
-#lead-panel-header {
-  display: flex;
-  flex-direction: column;
-  background: rgb(233, 233, 233);
-  padding: 8px;
-  cursor: move;
-  font-weight: bold;
-  border-radius: 8px 8px 0 0;
-  position: relative;
-  color: black;
-}
-
-#lead-panel-body {
-  padding: 10px;
-  border: 1px solid #b8b6b6;
-  border-radius: 10px;
-  margin: 10px;
-}
-
-#lead-panel-close {
-  position: absolute;
-  border-radius: 50%;
-  right: 3px;
-  top: 22px;
-  cursor: pointer !important;
-  font-size: 20px;
-  padding: 0 6px;
-  color: white;
-  background: rgb(235, 78, 78);
-}
-
-#lead-panel-close:hover {
-  background: rgb(130, 11, 0);
 }
